# INMOST-Mimetics

./: .gitignore  CMakeLists.txt
ADMFD/: CMakeLists.txt  advdiff.cpp  diffusion.cpp  diffusion_nonlinear.cpp  elastic.cpp
MFD-ES/: CMakeLists.txt  main.cpp
